--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,11 @@
     "@payloadcms/richtext-slate": "^3.60.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "next": "^15.0.0",
     "payload": "^3.60.0",
     "pg": "^8.12.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "sharp": "^0.33.4",
     "stripe": "^16.0.0"
   },
